fdo#51231 Revert "Slidesorter: Show the buttons on the opposite side..."

This reverts commit 4866b20ec6205b04cd21077fd00d68c4d4bb2c1b.
(cherry picked from commit e995824285cf6697a355d567abc8cd2df2b38b72)

Change-Id: If7ddcbbee142a384375c29c9b9389077e077b963
Signed-off-by: Stefan Knorr <heinzlesspam@gmail.com>
Signed-off-by: Jan Holesovsky <kendy@suse.cz>