sd/source/ui/slidesorter/view/SlsButtonBar.cxx
@@ -70,25 +70,19 @@ namespace sd { namespace slidesorter { namespace view {
 class ButtonBar::BackgroundTheme
 {
 public:
-    enum ButtonPosition { TOP, BOTTOM };
-public:
     BackgroundTheme(
         const ::boost::shared_ptr<Theme>& rpTheme,
         const ::std::vector<SharedButton>& rButtons);
-    ~BackgroundTheme() { }
+    virtual ~BackgroundTheme() { }
     /** Set the preview bounding box, the maximal area in which to display
         buttons.  A call to this method triggers a call to Layout().
     */
     void SetPreviewBoundingBox (const Rectangle& rPreviewBoundingBox);
     Button::IconSize GetIconSize (void) const;
 
-    BitmapEx CreateBackground () const;
-    Point GetBackgroundLocation (void);
-    Rectangle GetButtonArea (void);
-    void SetButtonPosition( ButtonPosition ePosition ) { mePosition = ePosition; }
-
-    /// Compute the positions & sizes.
-    void Layout (void);
+    virtual BitmapEx CreateBackground () const;
+    virtual Point GetBackgroundLocation (void);
+    virtual Rectangle GetButtonArea (void);
 
 protected:
     ::boost::shared_ptr<Theme> mpTheme;
@@ -100,8 +94,7 @@ protected:
     Rectangle maButtonArea;
     Point maBackgroundLocation;
 
-    /// This comes into effect only during Layout(), before it only caches the value.
-    ButtonPosition mePosition;
+    virtual void Layout (void);
 
 private:
     /// Compute the size of the are for the given button size.
@@ -286,24 +279,6 @@ void ButtonBar::ProcessMouseMotionEvent (
 }
 
 
-void ButtonBar::UpdateButtonPosition(
-    const model::SharedPageDescriptor& rpDescriptor,
-    const Point& rMousePosition)
-{
-    if (rpDescriptor && mpBackgroundTheme)
-    {
-        Rectangle aRectangle( rpDescriptor->GetBoundingBox() );
-        aRectangle.Bottom() -= aRectangle.GetHeight() / 2;
-
-        if (aRectangle.IsInside(rMousePosition))
-            mpBackgroundTheme->SetButtonPosition(ButtonBar::BackgroundTheme::BOTTOM);
-        else
-            mpBackgroundTheme->SetButtonPosition(ButtonBar::BackgroundTheme::TOP);
-
-        // Relayout, to propagate the newest location of the buttons
-        LayoutButtons();
-    }
-}
 
 
 void ButtonBar::ResetPage (void)
@@ -532,7 +507,6 @@ bool ButtonBar::LayoutButtons (void)
     nMaximumHeight += 2*nBorder;
 
     // Set up the bounding box of the button bar.
-    mpBackgroundTheme->Layout();
     maButtonBoundingBox = mpBackgroundTheme->GetButtonArea();
     maBackgroundLocation = mpBackgroundTheme->GetBackgroundLocation();
     if (Theme_ButtonPaintType == 1)
@@ -737,8 +711,7 @@ ButtonBar::BackgroundTheme::BackgroundTheme (
     : mpTheme(rpTheme),
       meIconSize( Button::IconSize_Large ),
       maButtonArea(),
-      maBackgroundLocation(),
-      mePosition( BOTTOM )
+      maBackgroundLocation()
 {
     UpdateMinimumIconSizes(rButtons);
 }
@@ -847,9 +820,9 @@ void ButtonBar::BackgroundTheme::Layout (void)
     }
 
     maBackgroundLocation = Point(
-        maPreviewBoundingBox.Left() + (maPreviewBoundingBox.GetWidth()-aImageSize.Width())/2,
-        mePosition == TOP? maPreviewBoundingBox.Top():
-                           maPreviewBoundingBox.Bottom() - aImageSize.Height());
+        maPreviewBoundingBox.Left()
+            + (maPreviewBoundingBox.GetWidth()-aImageSize.Width())/2,
+        maPreviewBoundingBox.Bottom() - aImageSize.Height());
     maButtonArea = Rectangle(maBackgroundLocation, aImageSize);
 }
 
